--- a/client/src/styles/homePageStyle.css
+++ b/client/src/styles/homePageStyle.css
@@ -25,16 +25,13 @@
     font-family: 'Lato', sans-serif;
     text-align: left;
     
-}
-@media screen and (min-width:500px) {
-    .homeMainContainer{
-        padding:5rem 1rem;
-    }
+    
 }
 .homeMainTextContainer{
- width: 300px;
-
+    width: 300px;
 }
+
+
 .move{
     animation:  leftToRight 0.7s ease forwards ;
 }
@@ -48,9 +45,8 @@
 }
 @media (min-width:1000px) {
     .homeMainTextContainer{
-        width: 500px;
-        
-       }
+        width: 600px;
+    }
     .findBuddy{
         font-size: 4rem;
     }
@@ -90,4 +86,75 @@
 }
 .whatWeOffer:hover, .getStarted:hover{
   animation:changeBackgroundColor 0.5s ease-in-out forwards;
+}
+
+
+.cardContainer{
+    display: flex;
+    align-content: center;
+    width: 80%;
+    max-width: 1300px;
+    background-color: #242935;
+    margin: 6rem auto;
+    min-height: 150px;
+
+}
+
+.card{
+   
+    padding:10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    max-width: 320px;  
+    min-height: 200px;
+
+}
+
+@keyframes test {
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+    
+}
+.inView{
+    opacity: 0;
+    animation: test 1s  0.3s ease-out forwards;
+}
+
+
+@keyframes stick {
+    0%{
+        
+        height:5px;
+    }
+    100%{
+        height: 100px;
+    }
+}
+.inView span{
+    border-radius: 20px;
+    width: 10px;
+    background-color: #3a6afe;
+    animation: stick 1s ease forwards;
+}
+
+@media screen and (max-width:1000px){
+    .cardContainer{
+        display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       background-color: transparent;
+    
+    }
+    .card{
+        margin: 0.5rem 0;
+        background-color: #242935;
+       border-radius: 10px;
+    }
+    
 }
