--- a/client/src/styles/userExistStyle.css
+++ b/client/src/styles/userExistStyle.css
@@ -52,7 +52,7 @@
 
 }
 
-.post{
+.searchPost{
     margin-top: 1rem;
     padding:10px 10px;
     max-width: 1000px;
@@ -101,4 +101,11 @@
 .userImage{
     width: 50px;
     height:50px;
+}
+.posts{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 1200px;
 }
