--- a/client/src/styles/longStyle.css
+++ b/client/src/styles/longStyle.css
@@ -1,7 +1,7 @@
 .LongPost{
     width: 80%;
     max-width: 1500px;
-    margin: 0 auto;
+    margin: 2rem auto;
 }
 
 
@@ -13,10 +13,28 @@
 }
 
 .longUserParagraph{
-    height: 100px;
+    min-height: 50px;
     word-wrap: break-word;
     overflow: hidden;
     color: #000000;
     font-size: 1.2rem;
     font-weight: 400;
+}
+
+.commentContainer{
+        width: 80%;
+        max-width: 1500px;
+        margin-top: 1rem;
+}
+.commentNameContainer{
+    display: flex;
+align-items: center;
+}
+.m{
+    margin-left: 1rem;
+}
+.commentImage{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
