--- a/client/src/styles/postStyle.css
+++ b/client/src/styles/postStyle.css
@@ -4,6 +4,9 @@
     max-width: 400px;
     text-align: left;
     margin: 1rem 1rem;
+    background-color: white;
+    padding:10px;
+    border-radius: 10px;
 }
 
 .userInfo{
@@ -62,14 +65,16 @@
     height: 5px;
     margin:0.5rem 0;
    border-radius: 50%;
-   
+}
+.dotwhite{
+    background-color: aliceblue;
 }
 
 /* .dots{
     position: relative;
 } */
 .pupopvisible{
-    display: block;
+    display: inline-block;
     position: absolute;
     background-color: white;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.452),-2px -2px 3px rgba(0, 0, 0, 0.452),-2px 2px 3px rgba(0, 0, 0, 0.452),2px -2px 3px rgba(0, 0, 0, 0.452);
