--- a/client/src/styles/userExistStyle.css
+++ b/client/src/styles/userExistStyle.css
@@ -171,6 +171,12 @@
     justify-content: center;
     align-items: center;
 }
+.invisible{
+    display: none;
+}
+.visible{
+    display: block;
+}
 .postsFlex{
     flex-direction: row;
 }
