--- a/client/src/styles/profileStyle.css
+++ b/client/src/styles/profileStyle.css
@@ -11,12 +11,14 @@
     display: flex;
     align-items: center;
 }
+
+
 .userimg{
     border-radius: 50%;
     margin-right: 1rem;
     width: 100px;
     height: 100px;
-
+    object-fit: cover;
 }
 .circle{
     background-color: black;
