--- a/client/src/styles/profileStyle.module.css
+++ b/client/src/styles/profileStyle.module.css
@@ -81,12 +81,13 @@
     display: flex;
     list-style: none;
     align-items: center;
+    justify-content: space-between;
 }
 .profileOptions li{
     cursor: pointer;
     font-size: 1.2rem;
-    margin: 0 3rem;
 }
+
 .profileOptions li:hover{
    color: rgba(0, 119, 255, 0.561);
 }
@@ -97,7 +98,7 @@
     margin-top: 2rem;
 }
 .aboutContainer{
-    margin: 1rem 1rem;
+    margin: 0rem 1rem;
     padding:20px 10px;
 }
 .userName{
@@ -106,15 +107,38 @@
 }
 .about{
     font-size: 1.2rem;
-    margin-top: 1.5rem;
+    margin-top: 1rem;
     font-family: 'Noto Sans JP', sans-serif;
     font-family: 'Raleway', sans-serif;
 }
 .followingPosts{
     background-color: rgb(200, 200, 200);
-    padding:20px 10px;
     width: 100%;
     margin-top: 2rem;
-    display: flex;
-    
+    display: flex;   
+}
+.followingNotPosts{
+    font-size: 1.3rem;
+    margin:0 1.6rem;
+}
+.postsText{
+    font-size: 1.6rem;
+}
+@media screen and (max-width:1000px) {
+    .profileOptions{
+      flex-direction: column;
+      margin: 0 auto;
+    }
+    .profileOptions li{
+     margin-top: 1rem;
+    }
+    .profileOptionsContainer{
+        text-align: center;
+        margin-top: 2rem;
+    }
+}
+@media screen and (max-width:600px) {
+    .imgContainer{
+        flex-direction: column;
+    }
 }
