--- a/client/src/styles/User.module.css
+++ b/client/src/styles/User.module.css
@@ -1,9 +1,15 @@
+.container{
+    max-width: 300px;
+    min-height: 200px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
 .userBox{
 display: flex;
-width: 50%;
-max-width: 200px;
+width: 90%;
+justify-content:flex-start;
 margin-left: 2rem;
-justify-content: space-around;
 align-items: center;
 cursor: pointer;
 }
@@ -14,7 +20,13 @@ cursor: pointer;
     height: 75px;
 }
 .userName{
+    margin-left: 1rem;
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
     font-size: 1.5rem;
+}
+
+
+@media screen  and (max-width:440px){
+    
 }
