--- a/client/src/styles/postStyle.css
+++ b/client/src/styles/postStyle.css
@@ -5,6 +5,7 @@
     text-align: left;
     margin: 1rem 1.6rem;
     background-color: white;
+    border: 1px solid black;
     padding:10px;
     border-radius: 10px;
 }
@@ -21,8 +22,8 @@
 
 }
 .userImage{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     margin-right: 1rem;
 }
@@ -143,3 +144,4 @@
       background-position: -2800px 0;
     }
   }
+  
