--- a/client/src/styles/Verify.module.css
+++ b/client/src/styles/Verify.module.css
@@ -1,56 +1,20 @@
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
-}
-
 .container{
+    margin-top: 2rem;
     display: flex;
-    margin-top: 10rem;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
-.box{
-    width: 50%;
-    max-width: 1000px;
-    background: linear-gradient(270deg, #00ffd8, #bdff00, #0024ff, #8500ff);
-    background-size: 800% 800%;
-    -webkit-animation: AnimationName 30s ease infinite;
-    -moz-animation: AnimationName 30s ease infinite;
-    animation: AnimationName 30s ease infinite;
-    padding: 50px 20px;
-    border-radius: 20px;
-    color:black;
-    text-align: center;
-    margin-bottom: 2rem;
-}
-
 .plsVerify{
-    background-color: rgba(255, 255, 255, 0.377);
+    font-size: 2rem;
+    color: rgba(0, 0, 0, 0.692);
     border-radius: 10px;
     padding:10px 0;
     margin-top: 2rem;
 }
 .plsVerifyLong{
-    background-color: rgba(255, 255, 255, 0.377);
     border-radius: 10px;
     padding:10px 0;
     margin-top: 1.5rem;
 }
 
-@media screen and (max-width:600px) {
-    .box{
-        width: 90%;
-
-    }
-    
-}
