--- a/client/src/Components/Layout/styleLayout.css
+++ b/client/src/Components/Layout/styleLayout.css
@@ -226,13 +226,16 @@
   height: 5px;
   background-color: white;
 }
-.invisible{
+
+.dropdowninvisible{
   display: none;
 }
-.visible{
+.dropdownvisible{
+  top:0%;
   display: flex;
-  height: 50vh;
-  width: 50%;
+  flex-direction: column;
+  height: 90vh;
+  width: 50vw;
   background-color: rgb(255, 255, 255);
   box-shadow: 1px 1px 1px black,-1px -1px 1px black,1px -1px 1px black,-1px 1px 1px black;
   position: absolute;
@@ -240,13 +243,16 @@
   overflow: hidden;
 }
 
-.dropdownContainer{
- 
-}
-.menuparag{
 
+
+.menuparag{
   text-align: center;
   margin: 1rem 0;
+  color:black;
+  text-decoration: none;
+}
+.blackLink{
+  text-decoration: none;
 }
 @media screen and (max-width:1000px) {
   .hamburger{
